--- a/package.json
+++ b/package.json
@@ -62,11 +62,11 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
-      "eslint --fix",
+      "eslint --fix --report-unused-disable-directives --max-warnings 0",
       "git add"
     ],
     "src/**/*.{css,less}": [
-      "stylelint --fix --custom-syntax postcss-less",
+      "stylelint --fix",
       "git add"
     ]
   }
