--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
     "lint:staged": "lint-staged"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^0.12.12",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@rainbow-me/rainbowkit": "^1",
     "axios": "^1.4.0",
-    "browserify-zlib": "^0.2.0",
     "classnames": "^2.3.2",
     "ethers": "^5",
     "events": "^3.3.0",
+    "framer-motion": "^10.18.0",
     "iclipboard": "^1.0.1",
-    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.0",
     "react-router-dom": "^6.11.0",
-    "styled-components": "^5.3.10",
-    "util": "^0.12.5",
-    "wagmi": "^0.12.12"
+    "viem": "^1.21.1",
+    "wagmi": "^1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -42,25 +43,14 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.2",
-    "less": "^4.1.3",
-    "less-loader": "^11.0.0",
     "lint-staged": "^13.0.4",
-    "postcss": "^8.4.23",
-    "postcss-less": "^6.0.0",
-    "postcss-syntax": "^0.36.2",
-    "stylelint": "^14.12.1",
-    "stylelint-config-standard": "^28.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-less": "^1.0.6",
-    "stylelint-order": "^5.0.0",
-    "stylelint-processor-styled-components": "^1.10.0",
     "svg-component-vite-plugin": "^0.3.2",
-    "tailwindcss": "^3.3.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-node-polyfills": "^0.19.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
-      "eslint --fix --report-unused-disable-directives --max-warnings 0",
+      "eslint --fix --report-unused-disable-directives --max-warnings 1",
       "git add"
     ],
     "src/**/*.{css,less}": [
